--- a/index.html
+++ b/index.html
@@ -14,69 +14,78 @@
 
 <body>
     <header class="header-web">
-        <a href=" " class="logo link-for-footer">
-            <span class="web ">Web</span><span class="studio ">Studio</span>
-        </a>
-        <nav>
-            <ul class="menu ">
-                <li><a href="index.html " class="studia link-for-footer">Студия</a></li>
-                <li><a href="portfolio.html " class="portfolio link-for-footer">Портфолио </a></li>
-                <li><a href=" " class="contacts link-for-footer">Контакты</a></li>
-            </ul>
-        </nav>
-        <a href="mailto:info@devstudio.com " class="mail link-for-footer">info@devstudio.com</a>
-        <a href="tel:+380961111111 " class="phone link-for-footer">+38 096 111 11 11</a>
+        <div class="conteiner">
+            <a href=" " class="logo link-for-footer">
+                <span class="web ">Web</span><span class="studio ">Studio</span>
+            </a>
+            <nav>
+                <ul class="menu ">
+                    <li><a href="index.html " class="studia link-for-footer">Студия</a></li>
+                    <li><a href="portfolio.html " class="portfolio link-for-footer">Портфолио </a></li>
+                    <li><a href=" " class="contacts link-for-footer">Контакты</a></li>
+                </ul>
+            </nav>
+            <a href="mailto:info@devstudio.com " class="mail link-for-footer">info@devstudio.com</a>
+            <a href="tel:+380961111111 " class="phone link-for-footer">+38 096 111 11 11</a>
+        </div>
     </header>
     <main>
         <section class="efect">
-            <h1 class="for-h1">
-                Эффективные решения <br /> для вашего бизнеса
-            </h1>
-            <button type="button" class="order"><span class="text-button">Заказать услугу</span></button>
+            <div class="container">
+                <h1 class="for-h1">
+                    Эффективные решения <br /> для вашего бизнеса
+                </h1>
+                <button type="button" class="order"><span class="text-button">Заказать услугу</span></button>
+            </div>
         </section>
-        <section>
-            <ul class="items">
-                <li class="block">
-                    <h3 class="names">Внимание к деталям</h3>
-                    <p class="p-style">
-                        Идейные соображения, а также начало повседневной работы по формированию позиции.
-                    </p>
-                </li>
-                <li class="block">
-                    <h3 class="names">Пунктуальность</h3>
-                    <p class="p-style">
-                        Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-                    </p>
-                </li>
-                <li class="block">
-                    <h3 class="names">Планирование</h3>
-                    <p class="p-style">
-                        Равным образом консультация с широким активом в значительной степени обуславливает.
-                    </p>
-                </li>
-                <li class="block">
-                    <h3 class="names">Современные технологии</h3>
-                    <p class="p-style">
-                        Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                    </p>
-                </li>
-            </ul>
+        <section class="our-sence">
+            <div class="conteiner">
+                <ul class="items">
+                    <li class="block">
+                        <h3 class="names">Внимание к деталям</h3>
+                        <p class="p-style">
+                            Идейные соображения, а также начало повседневной работы по формированию позиции.
+                        </p>
+                    </li>
+                    <li class="block">
+                        <h3 class="names">Пунктуальность</h3>
+                        <p class="p-style">
+                            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                        </p>
+                    </li>
+                    <li class="block">
+                        <h3 class="names">Планирование</h3>
+                        <p class="p-style">
+                            Равным образом консультация с широким активом в значительной степени обуславливает.
+                        </p>
+                    </li>
+                    <li class="block">
+                        <h3 class="names">Современные технологии</h3>
+                        <p class="p-style">
+                            Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
-        <section>
-            <h2 class="h2-style">Чем мы занимаемся</h2>
-            <ul class="images">
-                <li>
-                    <img src="images/img.jpg" alt="Програмирование" class="images-items" width="370" height="294" />
-                </li>
-                <li>
-                    <img src="images/img(1).jpg" alt="Вид мобильного приложения" class="images-items" width="370" height="294" />
-                </li>
-                <li>
-                    <img src="images/img(2).jpg" alt="Цветовая гамма" class="images-items" width="370" height="294" />
-                </li>
-            </ul>
+        <section class="evocation">
+            <div class="conteiner">
+                <h2 class="h2-style">Чем мы занимаемся</h2>
+                <ul class="images">
+                    <li>
+                        <img src="images/img.jpg" alt="Програмирование" class="images-items" width="370" height="294" />
+                    </li>
+                    <li>
+                        <img src="images/img(1).jpg" alt="Вид мобильного приложения" class="images-items" width="370" height="294" />
+                    </li>
+                    <li>
+                        <img src="images/img(2).jpg" alt="Цветовая гамма" class="images-items" width="370" height="294" />
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="dream-team">
+            <div class="conteiner"></div>
             <h2 class="h2-style">Наша команда</h2>
             <ul class="images">
                 <li class="team">
@@ -101,18 +110,21 @@
                     <!-- Main ul -->
                 </li>
             </ul>
+            </div>
         </section>
     </main>
 
     <footer>
-        <a href=" " class="logo-footer link-for-footer">
-            <span class="web ">Web</span><span class="studio-footer">Studio</span>
-        </a>
-        <address>
+        <div class="conteiner">
+            <a href=" " class="logo-footer link-for-footer">
+                <span class="web ">Web</span><span class="studio-footer">Studio</span>
+            </a>
+            <address>
             <a href="" class="map-footer link-for-footer">г. Киев, пр-т Леси Украинки, 26</a>
             <a href="mailto:info@example.com " class="mail-footer link-for-footer">info@example.com</a>
             <a href="tel:+380991111111" class="tel-footer link-for-footer">+38 099 111 11 11</a>
         </address>
+        </div>
     </footer>
 </body>
 
