--- a/portfolio.html
+++ b/portfolio.html
@@ -14,96 +14,102 @@
 
 <body>
     <header class="header-portfolio">
-        <a href=" " class="logo-portfolio link-for-footer">
-            <span class="web-portfolio ">Web</span><span class="studio-portfolio ">Studio</span>
-        </a>
-        <nav>
-            <ul class="menu ">
-                <li><a href="index.html " class="studia-portfolio link-for-footer ">Студия</a></li>
-                <li><a href="portfolio.html " class="portfolio-2 link-for-footer ">Портфолио </a></li>
-                <li><a href=" " class="contacts-portfolio link-for-footer ">Контакты</a></li>
-            </ul>
-        </nav>
-        <a href="mailto:info@devstudio.com " class="mail-portfolio link-for-footer  ">info@devstudio.com</a>
-        <a href="tel:+380961111111 " class="phone-portfolio link-for-footer ">+38 096 111 11 11</a>
+        <div class="container">
+            <a href=" " class="logo-portfolio link-for-footer">
+                <span class="web-portfolio ">Web</span><span class="studio-portfolio ">Studio</span>
+            </a>
+            <nav>
+                <ul class="menu ">
+                    <li><a href="index.html " class="studia-portfolio link-for-footer ">Студия</a></li>
+                    <li><a href="portfolio.html " class="portfolio-2 link-for-footer ">Портфолио </a></li>
+                    <li><a href=" " class="contacts-portfolio link-for-footer ">Контакты</a></li>
+                </ul>
+            </nav>
+            <a href="mailto:info@devstudio.com " class="mail-portfolio link-for-footer  ">info@devstudio.com</a>
+            <a href="tel:+380961111111 " class="phone-portfolio link-for-footer ">+38 096 111 11 11</a>
+        </div>
     </header>
     <main>
 
-        <section>
-            <section>
-                <ul class="buttons">
-                    <li><button type="button " class="all "><span class="text-for-all"> Все</span></button></li>
-                    <li><button type="button " class="website "><span class="text-for-button">Веб-сайты</span> </button></li>
-                    <li><button type="button " class="apps "><span class="text-for-button">Приложения</span> </button></li>
-                    <li><button type="button " class="design "><span class="text-for-button">Дизайн</span> </button></li>
-                    <li><button type="button " class="marketing "><span class="text-for-button">Маркетинг</span> </button></li>
-                </ul>
-            </section>
-            <section>
-                <ul class="images-box ">
-                    <li class="box">
-                        <img src="images/1.1.jpg " alt="Технокряк" width="370" height="294" />
-                        <h2 class="for-h2">Технокряк</h2>
-                        <p class="for-p ">Веб-сайт</p>
-                    </li>
-                    <li class="box">
-                        <img src="images/2.2.jpg " alt="Постер New Orlean vs Golden Star" width="370" height="294" />
-                        <h2 class="for-h2">Постер New Orlean vs Golden Star</h2>
-                        <p class="for-p ">Дизайн</p>
-                    </li>
-                    <li class="box">
-                        <img src="images/3.3.jpg " alt="Ресторан Seafood" width="370" height="294" />
-                        <h2 class="for-h2">Ресторан Seafood</h2>
-                        <p class="for-p ">Приложение</p>
-                    </li>
-                </ul>
-                <ul class="images-box">
-                    <li class="box">
-                        <img src="images/4.4.jpg " alt="headphone" width="370" height="294" />
-                        <h2 class="for-h2">Проект Prime</h2>
-                        <p class="for-p ">Маркетинг</p>
-                    </li>
-                    <li class="box">
-                        <img src="images/5.5.jpg " alt="Boxes" width="370" height="294" />
-                        <h2 class="for-h2">Проект Boxes</h2>
-                        <p class="for-p ">Приложение</p>
-                    </li>
-                    <li class="box">
-                        <img src="images/6.6.jpg " alt="Web site on the monitor" width="370" height="294" />
-                        <h2 class="for-h2">Inspiration has no Borders</h2>
-                        <p class="for-p "> Веб-сайт</p>
-                </ul>
-                <ul class="images-box ">
-                    </li>
-                    <li class="box">
-                        <img src="images/7.7.jpg " alt="Megazine" width="370" height="294" />
-                        <h2 class="for-h2">Издание Limited Edition</h2>
-                        <p class="for-p ">Дизайн</p>
-                    </li>
-                    <li class="box">
-                        <img src="images/8.8.jpg " alt="tag" width="370" height="294" />
-                        <h2 class="for-h2">Проект LAB</h2>
-                        <p class="for-p ">Маркетинг</p>
-                    </li>
-                    <li class="box">
-                        <img src="images/9.9.jpg " alt="laptop" width="370" height="294" />
-                        <h2 class="for-h2">Growing Business</h2>
-                        <p class="for-p ">Приложение</p>
-                    </li>
-                </ul>
-            </section>
+        <section class="main-section">
+            <div class="conteiner">
+                <section>
+                    <ul class="buttons">
+                        <li><button type="button " class="all "><span class="text-for-all"> Все</span></button></li>
+                        <li><button type="button " class="website "><span class="text-for-button">Веб-сайты</span> </button></li>
+                        <li><button type="button " class="apps "><span class="text-for-button">Приложения</span> </button></li>
+                        <li><button type="button " class="design "><span class="text-for-button">Дизайн</span> </button></li>
+                        <li><button type="button " class="marketing "><span class="text-for-button">Маркетинг</span> </button></li>
+                    </ul>
+                </section>
+                <section>
+                    <ul class="images-box ">
+                        <li class="box">
+                            <img src="images/1.1.jpg " alt="Технокряк" width="370" height="294" />
+                            <h2 class="for-h2">Технокряк</h2>
+                            <p class="for-p ">Веб-сайт</p>
+                        </li>
+                        <li class="box">
+                            <img src="images/2.2.jpg " alt="Постер New Orlean vs Golden Star" width="370" height="294" />
+                            <h2 class="for-h2">Постер New Orlean vs Golden Star</h2>
+                            <p class="for-p ">Дизайн</p>
+                        </li>
+                        <li class="box">
+                            <img src="images/3.3.jpg " alt="Ресторан Seafood" width="370" height="294" />
+                            <h2 class="for-h2">Ресторан Seafood</h2>
+                            <p class="for-p ">Приложение</p>
+                        </li>
+                    </ul>
+                    <ul class="images-box">
+                        <li class="box">
+                            <img src="images/4.4.jpg " alt="headphone" width="370" height="294" />
+                            <h2 class="for-h2">Проект Prime</h2>
+                            <p class="for-p ">Маркетинг</p>
+                        </li>
+                        <li class="box">
+                            <img src="images/5.5.jpg " alt="Boxes" width="370" height="294" />
+                            <h2 class="for-h2">Проект Boxes</h2>
+                            <p class="for-p ">Приложение</p>
+                        </li>
+                        <li class="box">
+                            <img src="images/6.6.jpg " alt="Web site on the monitor" width="370" height="294" />
+                            <h2 class="for-h2">Inspiration has no Borders</h2>
+                            <p class="for-p "> Веб-сайт</p>
+                    </ul>
+                    <ul class="images-box ">
+                        </li>
+                        <li class="box">
+                            <img src="images/7.7.jpg " alt="Megazine" width="370" height="294" />
+                            <h2 class="for-h2">Издание Limited Edition</h2>
+                            <p class="for-p ">Дизайн</p>
+                        </li>
+                        <li class="box">
+                            <img src="images/8.8.jpg " alt="tag" width="370" height="294" />
+                            <h2 class="for-h2">Проект LAB</h2>
+                            <p class="for-p ">Маркетинг</p>
+                        </li>
+                        <li class="box">
+                            <img src="images/9.9.jpg " alt="laptop" width="370" height="294" />
+                            <h2 class="for-h2">Growing Business</h2>
+                            <p class="for-p ">Приложение</p>
+                        </li>
+                    </ul>
+                </section>
+            </div>
         </section>
     </main>
 
     <footer>
-        <a href=" " class="logo-footer link-for-footer">
-            <span class="web ">Web</span><span class="studio-footer">Studio</span>
-        </a>
-        <address> 
+        <div class="conteiner">
+            <a href=" " class="logo-footer link-for-footer">
+                <span class="web ">Web</span><span class="studio-footer">Studio</span>
+            </a>
+            <address> 
             <a href="" class="map-footer link-for-footer">г. Киев, пр-т Леси Украинки, 26</a>
             <a href="mailto:info@example.com" class="mail-footer link-for-footer ">info@example.com</a>
             <a href="tel:+380991111111" class="tel-footer link-for-footer ">+38 099 111 11 11</a>
         </address>
+        </div>
     </footer>
 </body>
 
